--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-cli": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.59.0",
@@ -32,6 +33,5 @@
     "regenerator-runtime": "^0.11.0"
   },
   "jest": {},
-  "dependencies": {
-  }
+  "dependencies": {}
 }
